# Clean_Architecture

./: .editorconfig  .gitignore  README.md
components/backend/simple_medication_selection/: README.md  main.py  pyproject.toml
components/backend/simple_medication_selection/adapters/api/: __init__.py  app.py  settings.py  spec.py
components/backend/simple_medication_selection/adapters/database/: __init__.py  mapping.py  settings.py  tables.py  transactions.py  utils.py
components/backend/simple_medication_selection/adapters/log/: settings.py
components/backend/simple_medication_selection/adapters/med_selection_api/: app.py  spec.py
components/backend/simple_medication_selection/adapters/message_bus/: __init__.py  consumer.py  settings.py
components/backend/simple_medication_selection/application/: entities.py
components/backend/simple_medication_selection/application/dtos/: __init__.py  base.py  diagnosis.py  item.py  item_category.py  item_review.py  item_type.py  medical_book.py  patient.py  symptom.py  treatment_item.py
components/backend/simple_medication_selection/application/errors/: __init__.py  base.py  diagnosis.py  item.py  item_category.py  item_review.py  item_types.py  medical_book.py  patient.py  symptom.py
components/backend/simple_medication_selection/application/interfaces/: __init__.py  diagnoses.py  diagnosis.py  item.py  item_categories.py  (+12 more)
components/backend/simple_medication_selection/entrypoints/: healing_api.py
components/backend/simple_medication_selection/launchers/: alembic_runner.py  api.py  api_with_rabbitmq.py  consumer.py
(+275 files in other folders)
