[tool.poetry]
name = "simple_medication_selection"
version = "0.1.0"
description = ""
authors = ["Ivan Shikhanov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "<2.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
python-json-logger = "^2.0.7"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
falcon = "^3.1.3"
spectree = "^1.2.9"
falcon-swagger-ui = "^1.2.2"
gunicorn = "^21.2.0"
gevent = "^24.2.1"
gevent-websocket = "^0.10.1"

[tool.poetry.scripts]
simple_medication_selection = "simple_medication_selection.entrypoints.healing_api:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
sqlparse = "^0.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
